deploy: 99b03ca5298699ab79a804b43f4cc22cac5981ce

--- a/interfaces/_local_.sitejson.html
+++ b/interfaces/_local_.sitejson.html
@@ -81,10 +81,6 @@
 					<li><a href="../classes/_local_.site.html" class="tsd-signature-type">Site</a></li>
 				</ul>
 			</section>
-			<section class="tsd-panel tsd-kind-interface tsd-parent-kind-module">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
-			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
@@ -93,8 +89,10 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#autoenableinstantreload" class="tsd-kind-icon">auto<wbr>Enable<wbr>Instant<wbr>Reload</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#calltoactionbannerdismissed" class="tsd-kind-icon">call<wbr>ToAction<wbr>Banner<wbr>Dismissed</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#clonedimage" class="tsd-kind-icon">cloned<wbr>Image</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#container" class="tsd-kind-icon">container</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#database" class="tsd-kind-icon">database</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#devmode" class="tsd-kind-icon">dev<wbr>Mode</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#domain" class="tsd-kind-icon">domain</a></li>
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.sitejson.html#environment" class="tsd-kind-icon">environment</a></li>
@@ -129,7 +127,17 @@
 					<div class="tsd-signature tsd-kind-icon">auto<wbr>Enable<wbr>Instant<wbr>Reload<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L105">index.d.ts:105</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L105">index.d.ts:105</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="calltoactionbannerdismissed" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> call<wbr>ToAction<wbr>Banner<wbr>Dismissed</h3>
+					<div class="tsd-signature tsd-kind-icon">call<wbr>ToAction<wbr>Banner<wbr>Dismissed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L107">index.d.ts:107</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -139,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">cloned<wbr>Image<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L110">index.d.ts:110</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L112">index.d.ts:112</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -149,7 +157,17 @@
 					<div class="tsd-signature tsd-kind-icon">container<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L112">index.d.ts:112</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L114">index.d.ts:114</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="database" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> database</h3>
+					<div class="tsd-signature tsd-kind-icon">database<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L118">index.d.ts:118</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -159,7 +177,7 @@
 					<div class="tsd-signature tsd-kind-icon">dev<wbr>Mode<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L111">index.d.ts:111</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L113">index.d.ts:113</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -169,7 +187,7 @@
 					<div class="tsd-signature tsd-kind-icon">domain<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L100">index.d.ts:100</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L100">index.d.ts:100</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,7 +197,7 @@
 					<div class="tsd-signature tsd-kind-icon">environment<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L117">index.d.ts:117</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L120">index.d.ts:120</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -189,7 +207,7 @@
 					<div class="tsd-signature tsd-kind-icon">environment<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L118">index.d.ts:118</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L121">index.d.ts:121</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -199,7 +217,7 @@
 					<div class="tsd-signature tsd-kind-icon">flywheel<wbr>Connect<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L108">index.d.ts:108</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L110">index.d.ts:110</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -209,7 +227,7 @@
 					<div class="tsd-signature tsd-kind-icon">host<wbr>Connections<span class="tsd-signature-symbol">:</span> <a href="_local_.hostconnection.html" class="tsd-signature-type">HostConnection</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L89">index.d.ts:89</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L89">index.d.ts:89</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -219,7 +237,7 @@
 					<div class="tsd-signature tsd-kind-icon">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L87">index.d.ts:87</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L87">index.d.ts:87</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -229,7 +247,7 @@
 					<div class="tsd-signature tsd-kind-icon">live<wbr>Link<wbr>Pro<wbr>Settings<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#sitelivelinkprosettings" class="tsd-signature-type">SiteLiveLinkProSettings</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L103">index.d.ts:103</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L103">index.d.ts:103</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -239,7 +257,7 @@
 					<div class="tsd-signature tsd-kind-icon">local<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L90">index.d.ts:90</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L90">index.d.ts:90</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -249,7 +267,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>Site<span class="tsd-signature-symbol">:</span> <a href="../enums/_local_.multisite.html" class="tsd-signature-type">MultiSite</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L92">index.d.ts:92</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L92">index.d.ts:92</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -259,7 +277,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>Site<wbr>Domains<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L93">index.d.ts:93</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L93">index.d.ts:93</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -269,7 +287,7 @@
 					<div class="tsd-signature tsd-kind-icon">mysql<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>database<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>password<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>user<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L94">index.d.ts:94</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L94">index.d.ts:94</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -293,7 +311,7 @@
 					<div class="tsd-signature tsd-kind-icon">mysql<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L114">index.d.ts:114</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L116">index.d.ts:116</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -303,7 +321,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L99">index.d.ts:99</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L99">index.d.ts:99</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -313,7 +331,7 @@
 					<div class="tsd-signature tsd-kind-icon">path<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L88">index.d.ts:88</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L88">index.d.ts:88</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -323,7 +341,7 @@
 					<div class="tsd-signature tsd-kind-icon">php<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L113">index.d.ts:113</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L115">index.d.ts:115</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -333,7 +351,7 @@
 					<div class="tsd-signature tsd-kind-icon">ports<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L116">index.d.ts:116</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L119">index.d.ts:119</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -351,7 +369,7 @@
 					<div class="tsd-signature tsd-kind-icon">services<span class="tsd-signature-symbol">:</span> <a href="../modules/_local_.html#siteservices" class="tsd-signature-type">SiteServices</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L91">index.d.ts:91</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L91">index.d.ts:91</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -361,7 +379,7 @@
 					<div class="tsd-signature tsd-kind-icon">sslSHA1<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L109">index.d.ts:109</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L111">index.d.ts:111</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -371,7 +389,7 @@
 					<div class="tsd-signature tsd-kind-icon">web<wbr>Server<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L115">index.d.ts:115</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L117">index.d.ts:117</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -381,7 +399,7 @@
 					<div class="tsd-signature tsd-kind-icon">workspace<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/index.d.ts#L101">index.d.ts:101</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L101">index.d.ts:101</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -454,10 +472,16 @@
 								<a href="_local_.sitejson.html#autoenableinstantreload" class="tsd-kind-icon">auto<wbr>Enable<wbr>Instant<wbr>Reload</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_.sitejson.html#calltoactionbannerdismissed" class="tsd-kind-icon">call<wbr>ToAction<wbr>Banner<wbr>Dismissed</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.sitejson.html#clonedimage" class="tsd-kind-icon">cloned<wbr>Image</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.sitejson.html#container" class="tsd-kind-icon">container</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_.sitejson.html#database" class="tsd-kind-icon">database</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.sitejson.html#devmode" class="tsd-kind-icon">dev<wbr>Mode</a>
