--- a/classes/_local_main_.services.siteprocessmanager.html
+++ b/classes/_local_main_.services.siteprocessmanager.html
@@ -87,6 +87,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#attachprocess" class="tsd-kind-icon">attach<wbr>Process</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#getsitestatus" class="tsd-kind-icon">get<wbr>Site<wbr>Status</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#getsitestatuses" class="tsd-kind-icon">get<wbr>Site<wbr>Statuses</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#hasrunningprocess" class="tsd-kind-icon">has<wbr>Running<wbr>Process</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#restart" class="tsd-kind-icon">restart</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="_local_main_.services.siteprocessmanager.html#start" class="tsd-kind-icon">start</a></li>
@@ -109,7 +110,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L874">main.d.ts:874</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L874">main.d.ts:874</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -135,7 +136,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L876">main.d.ts:876</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L876">main.d.ts:876</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -149,6 +150,28 @@
 					</ul>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="getsitestatuses" class="tsd-anchor"></a>
+					<h3>get<wbr>Site<wbr>Statuses</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Site<wbr>Statuses<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-symbol">{}</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L878">main.d.ts:878</a></li>
+								</ul>
+							</aside>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-symbol">{}</span></h4>
+							<ul class="tsd-parameters">
+								<li class="tsd-parameter-index-signature">
+									<h5><span class="tsd-signature-symbol">[</span>siteId: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">Local.SiteStatus</span></h5>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
 					<a name="hasrunningprocess" class="tsd-anchor"></a>
 					<h3>has<wbr>Running<wbr>Process</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -158,7 +181,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L872">main.d.ts:872</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L872">main.d.ts:872</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -184,7 +207,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L870">main.d.ts:870</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L870">main.d.ts:870</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -207,7 +230,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L863">main.d.ts:863</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L863">main.d.ts:863</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -236,7 +259,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L865">main.d.ts:865</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L865">main.d.ts:865</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -270,7 +293,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/29ae53d/main.d.ts#L878">main.d.ts:878</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L880">main.d.ts:880</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -299,6 +322,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.siteprocessmanager.html#getsitestatus" class="tsd-kind-icon">get<wbr>Site<wbr>Status</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="_local_main_.services.siteprocessmanager.html#getsitestatuses" class="tsd-kind-icon">get<wbr>Site<wbr>Statuses</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="_local_main_.services.siteprocessmanager.html#hasrunningprocess" class="tsd-kind-icon">has<wbr>Running<wbr>Process</a>
